--- a/package.json
+++ b/package.json
@@ -2,33 +2,25 @@
   "name": "rename-me",
   "version": "0.0.1",
   "scripts": {
-    "get-joomla": "node joomla-tools.mjs -i",
+    "get-joomla": "joomla-tools.mjs -i",
     "link": "joomla-tools -l",
     "build": "joomla-tools -b media_source",
     "release": "joomla-tools -r",
     "init": "joomla-tools -i && joomla-tools -l && joomla-tools -b media_source",
-    "lint-css": "npx stylelint media_src/css/.",
-    "lint-js": "npx eslint media_src/js/.",
+    "lint-css": "./node_modules/stylelint/bin/stylelint.js ./media_source/.",
+    "lint-js": "./node_modules/eslint/bin/eslint.js ./media_source/**/*.mjs",
     "lint": "npm run lint-css && npm run lint-js",
     "update:browserlist": "npx browserslist@latest --update-db"
   },
   "devDependencies": {
-    "@dgrammatiko/joomla-tools": "0.0.1-alpha.2",
-    "eslint": "8.39.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-vue": "9.11.0",
-    "stylelint": "15.6.0",
-    "stylelint-config-standard": "33.0.0",
-    "stylelint-order": "6.0.3",
-    "stylelint-scss": "5.0.0"
+    "@dgrammatiko/joomla-tools": "github:dgrammatiko/joomla-tools#main"
   },
   "joomla-extensions": {
     "components": [],
     "libraries": [],
     "modules": {
       "administrator": [
-        "publicfolder"
+        { "name": "publicfolder", "version": "0.0.1" }
       ],
       "site": []
     },
